--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,128 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   min-height: 100vh;
+  /* background-color: #f2f2f2; */
+}
+
+.App {
+  display: flex;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.container {
+  display: flex;
+  width: 100%;
+}
+
+.conversation-panel {
+  /*flex: 1;*/
+  width: 50%;
+  padding: 20px;
+  overflow-y: auto;
+  background-color: #fff;
+}
+
+.message {
+  padding: 10px;
+  margin: 5px;
+  max-width: 100%;
+  border-radius: 10px;
+  font-size: 16px;
+}
+
+.user {
+  align-self: flex-end;
+  background-color: #3498db;
+  color: white;
+  text-align: right;
+}
+
+.bot {
+  align-self: flex-start;
+  background-color: #f1f1f1;
+  color: black;
+}
+
+.right-panel {
+  /*flex: 1;*/
+  width: 50%;
+  padding: 20px;
+  background-color: #fff;
+  border-left: 1px solid #ccc;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  align-items: stretch;
 }
 
-.App-link {
-  color: #61dafb;
+.right-panel-content {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Center content horizontally */
+  overflow-y: auto;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.class-section {
+  margin-top: 20px;
+}
+
+.class-buttons {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  overflow-y: auto;
+}
+
+.class-buttons button {
+  padding: 10px;
+  background-color: #16537c;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  /*width: 100%;*/
+  text-align: left;
+}
+
+.selected {
+  background-color: #fff; 
+}
+
+.done-button {
+  padding: 10px;
+  background-color: #b10000;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  text-align: center;
+  font-size: 16px;
+}
+
+.messages {
+  margin-bottom: 10px;
+}
+
+.message {
+  padding: 5px 10px;
+  border-radius: 10px;
+  margin: 5px 0;
+  max-width: 100%;
+}
+
+.user-message {
+  background-color: #3498db;
+  color: #fff;
+  align-self: flex-end;
+}
+
+.bot-message {
+  background-color: #ccc;
+  color: #000;
+  align-self: flex-start;
 }
